# be-happy-backend

./: .env.template  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml
app/: auth.py  bot.py  config.py  database.py  exceptions.py  main.py  models.py  repository.py  schemas.py
app/city/: dependencies.py  models.py  repository.py  router.py  schema.py  services.py
app/migrations/: env.py
app/migrations/versions/: 0b54b2e996f9_.py  0d786d5e68fe_.py  117dfd6d1367_.py  1a50cb18f568_.py  1ca916a89d8b_.py  1d83c89ce167_.py  223462abd4c0_.py  58679fc0759f_.py  610a0633a584_.py  622943a100a2_.py  6ac58ef6c835_.py  89bf7b6ada6f_.py  93493b60dc6e_.py  ae7c29786c81_.py  c8c7ea47745c_.py  cc7d7b47b347_.py  cff0d0c5108b_.py  d2e801b1ee55_.py  d87f6ad9a900_.py  e5885b87710c_.py  e64add6f3cd8_.py
app/user/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
